Search controller added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=chatTogether
+
+jwt.token.expiry.day=100
+jwt.token.secret.key=Fs7hkDy1xKQmEcfwKuMCBUr9qNxdX6T0A8QK5Ms1816347hqgfh348
